# voxelite

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  chunk_format.ods
assets/shaders/: base_shader.fsh  base_shader.vsh  quad.fsh  quad2.vsh  shadow.fsh
include/: chunk.hpp  main.hpp  model.hpp  palette.hpp  serializer.hpp  shader.hpp  util.hpp  voxel.hpp  world.hpp  worldgen.hpp
include/.glad/: glad.h
include/glad/: glad.h
src/: CMakeLists.txt  chunk.cpp  glad.c  main.cpp  model.cpp  palette.cpp  serializer.cpp  util.cpp  voxel.cpp  world.cpp  worldgen.cpp
